Version 1.7.11+svn:
 * Language and i18n:
   * Updated translations: Finnish, German, Italian, Latin, Russian,
     Shavian
 * User interface:
   * Switched back to the tiled background for gui2
 * Miscellaneous and bugfixes:
   * Fix scrolling during animation (bug 13106)
   * Fix drakes tipping their wings in the water when flying

Version 1.7.11-1.8beta4:
 * Language and i18n:
   * Updated translations: Chinese (Simplified), Estonian, French, Latvian,
     Lithuanian, Portuguese (Brazil), Russian, Serbian, Slovak, Spanish
   * Manual: updated CSS style to cover Docbook markup for GUI elements
 * User interface:
   * Add a new repeating button widget
   * Scrollbar buttons now keep scrolling when kept pressed down
   * Optimized the speed of the --new-widgets game load dialog
   * Waypoints of multi-turns moves are now saved between reload
 * WML Engine:
   * Rework of semantics of [unit] tags. Added 'placement' attribute.
     Fix bugs #14373, #14444, #14451 and other 'duplicated unit' issues in LoW
 * Miscellaneous and bugfixes:
   * Scrollbar containers now use the button super class
   * Allow a gui2 timer delete itself in its callback
   * Fix various bugs when a unit has more MP than its maximum
   * Fix not redrawing a grid when set to hidden
   * Add helper functions to show/hide rows in a listbox

Version 1.7.10-1.8beta3:
 * Campaigns:
   * Under the Burning Suns:
     * Fix locations of some items in "In the domain of the dwarves"
       (bug #14925)
 * Graphics:
   * Added attack icon for Drake Ram attack, and for UtBS's Giant Ant.
 * Language and i18n:
   * Updated translations: French, German, Hungarian, Italian, Latvian,
     Lithuanian, Polish, Portuguese (Brazil), Russian, Serbian, Slovak
 * User interface:
   * Don't reserve space for scrollbars in message dialogs
   * Ctrl-f for fullscreen works again in the MP lobby (bug #14759)
   * Resizing the MP lobby no longer crashes randomly
 * WML Engine: