@@ -10,6 +10,9 @@ Version 1.7.11+svn:
  * Graphics:
    * Improved the background for the new dialogs.
 
+ * Multiplayer:
+   * Dummy sides no longer get a turn, e.g. the status in Caves of the Basilisk
+
 Version 1.7.11-1.8beta4:
  * Language and translations:
    * Updated translations: Chinese (Simplified), Estonian, French, Latvian,
